--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.4",
+    "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "eslint": "^8",
