--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "three": "^0.166.1"
   },
   "devDependencies": {
