--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.3.4",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
