--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "three": "^0.166.1"
   },
   "devDependencies": {
+    "@types/node": "22.3.0",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.3"
   }
