--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "framer-motion": "^11.3.4",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
-    "next": "14.1.3",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-twitter-embed": "^4.0.4",
     "three": "^0.166.1"
   },
   "devDependencies": {
